# ca-disease-simulator

./: README.md  ca-disease-simulator.cabal
simulator-cli/: Main.hs
src/Disease/: Disease.hs  Universe.hs  Vaccine.hs
test/: QCTests.hs
