name:                ca-disease-simulator
version:             0.1.0
synopsis:            A Cellular Automaton to simulate the spread of an infectious disease
homepage:            https://github.com/sgillespie/ca-disease-simulator
license:             MIT
license-file:        LICENSE
author:              Sean Gillespie
maintainer:          sean@mistersg.net
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Disease.Disease,
                        Disease.Universe,
                        Disease.Vaccine
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && <4.9,
                        comonad -any,
                        random -any

executable sim-disease
  hs-source-dirs:       simulator-cli
  main-is:              Main.hs
  -- other-modules:
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && <4.9,
                        ca-disease-simulator,
                        comonad -any,
                        process -any,
                        random -any		

test-suite qc-tests
  type:                 detailed-0.9
  test-module:          QCTests
  hs-source-dirs:       test
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && <4.9,
                        Cabal >= 1.19 && < 1.23,
                        comonad -any,
                        QuickCheck >= 2.6 && <2.9,
                        random == 1.1,
                        cabal-test-quickcheck -any,
                        ca-disease-simulator == 0.1.0